tests/errors/test_53.x
// Array in struct definition must have size defined

struct ArrayWrapper -> {
    array: i64[]
}

fn main() -> void {}